--- a/index.html
+++ b/index.html
@@ -7,44 +7,62 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<div class="flex-container darkgray" style="color: white; height:100px; justify-content: space-around;">
-  <div style="padding-top:25px;">Bloomfield</div>
-  <div class="flex-container" style="padding-top:25px;">
-    <div style="padding-right: 10px">Sales</div>
-    <div style="padding-right: 10px">Community</div>
-    <div>Area</div>
+
+<div class="flex-container darkgray" style="color: white; height:40px; padding-top: 20px; justify-content: space-evenly;">
+  <div>Bloomfield</div>
+    <div class="flex-container" style="gap: 2rem">
+      <div>Sales</div>
+      <div>Community</div>
+      <div>Area</div>
   </div>
 </div>
 
 
-<div class="flex-container darkgray" style="color: white; height:175px; justify-content: space-around;">
-
-  <div class="flex-container" style="flex-direction: column;flex:1;">
-    <h4>This website is awesome</h4>
-    <p>This website has some subtext that goes here under the main title. It's smalled font and the color is lower contrast</p>
+<div class="flex-container darkgray center" style="color: white; gap: 10em; height: 200px;">
+  <div class="flex-container" style="flex-direction: column; padding-right: 25px;">
+    <h4>Best house money can buy!</h4>
+    <p>Please Buy your house with us!</p>
     <a href="https://www.bloomfieldhomes.com/about-us/">
-      <button style="width: 60px;">About</button>
+      <button class="rounded" style="width: 60px; background-color: rgb(28, 28, 190); color: white">About</button>
     </a>
   </div>
 
-  <div class="flex-container center" style=" flex:1">
-    <div class="lightgray center" style="height: auto padding-right: 50px">
-      <a href="https://bloomfieldhomes.com">
-        <img style="width:200px;" src="https://media.bloomfieldhomes.com/328/2023/9/13/logo-horizontal.png?width=400&ois=7001543&fit=bounds&height=89">
-      </a>
-    </div>
+  <div class="flex-container center">
+    <a href="https://bloomfieldhomes.com">
+      <img style="width:200px;" src="https://media.bloomfieldhomes.com/328/2023/9/13/logo-horizontal.png?width=400&ois=7001543&fit=bounds&height=89">
+    </a>
   </div>
 </div>
-<div class="flex-container" style="height: 175px; flex-direction: column;">
-  <h4>Buy Now!</h4>
-  <div class="flex-container" style="justify-content: space-between;flex-direction:column;">
-    <div class="boxes">test</div>
-    <div class="boxes">test</div>
-    <div class="boxes">test</div>
-    <div class="boxes">test</div>
+
+<h4 style="text-align: center;">Buy Now!</h4>
+
+<div class="flex-container" style="flex-direction: column; justify-content: center;">
+  <div class="flex-container center" style="gap:2em; justify-content: inherit; height: 200px;">
+    <div class="flex-container" style="flex-direction: column;">
+    <img src="https://cdn.pixabay.com/photo/2016/07/28/09/01/mountains-1547302_640.jpg" alt="Mountain House" class="square">
+    <p style="text-align: center;">Mountain</p>
   </div>
-  
+  <div class="flex-container" style="flex-direction: column;">
+    <img src="https://cdn.pixabay.com/photo/2022/01/26/04/47/house-6967908_640.jpg" alt="River House" class="square">
+    <p style="text-align: center;">River</p>
+  </div>
+  <div class="flex-container" style="flex-direction: column;">
+    <img src="https://cdn.pixabay.com/photo/2016/12/06/14/33/log-cabin-1886620_640.jpg" alt="Woods House" class="square">
+    <p style="text-align: center;">Woods</p>
+  </div>
+  <div class="flex-container" style="flex-direction: column;">
+    <img src="https://cdn.pixabay.com/photo/2023/08/19/08/26/house-8200038_640.jpg" alt="Farm House" class="square">
+    <p style="text-align: center;">Farm</p>
+  </div>
 </div>
-   
+
+<div class="flex-container lightgray center">
+  <div class="flex-container" style="width: 600px;">
+    <i style="padding: 30px;">The Bloomfield Homes team has grown over the last twenty years from a small startup company in Mansfield to a market leader in the DFW Metroplex.  After building over 16,000 homes for local families, Bloomfield happily remains a family-oriented business focused exclusively on the local market.
+    Our growth has allowed us to become a major land purchaser and developer.  Bloomfield Homes designs a wide variety of neighborhoods while working closely with local governments and school districts.  Many neighborhoods include elementary schools, connected trail systems, and parks.  Dozens of Bloomfield employees have utilized a special purchase program to build their family a Bloomfield home.
+    We greatly enjoy our daily work delivering the American Dream of homeownership.  Each home, each family, and each neighborhood is a unique and special place that we enjoy visiting many years later to see how it evolves.
+    Thank you for taking the time to visit us and consider us as your homebuilder.</i>
+  </div>
+</div>
 
 </html>
