finished 3rd row

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <div class="flex-container darkgray" style="color: white; height:40px; padding-top: 20px; justify-content: space-evenly;">
-  <div>Bloomfield</div>
+  <div style="padding-right: 160px;">Bloomfield Homes</div>
     <div class="flex-container" style="gap: 2rem">
       <div>Sales</div>
       <div>Community</div>
@@ -23,7 +23,7 @@
     <h4>Best house money can buy!</h4>
     <p>Please Buy your house with us!</p>
     <a href="https://www.bloomfieldhomes.com/about-us/">
-      <button class="rounded" style="width: 60px; background-color: rgb(28, 28, 190); color: white">About</button>
+      <button class="rounded" style="width: 60px; background-color: rgb(28, 28, 190); color: white;">About</button>
     </a>
   </div>
 
@@ -57,11 +57,12 @@
 </div>
 
 <div class="flex-container lightgray center">
-  <div class="flex-container" style="width: 600px;">
-    <i style="padding: 30px;">The Bloomfield Homes team has grown over the last twenty years from a small startup company in Mansfield to a market leader in the DFW Metroplex.  After building over 16,000 homes for local families, Bloomfield happily remains a family-oriented business focused exclusively on the local market.
+  <div class="flex-container" style="width: 600px; flex-direction: column;">
+    <i style="padding-top: 60px; padding-bottom: 5px;">The Bloomfield Homes team has grown over the last twenty years from a small startup company in Mansfield to a market leader in the DFW Metroplex.  After building over 16,000 homes for local families, Bloomfield happily remains a family-oriented business focused exclusively on the local market.
     Our growth has allowed us to become a major land purchaser and developer.  Bloomfield Homes designs a wide variety of neighborhoods while working closely with local governments and school districts.  Many neighborhoods include elementary schools, connected trail systems, and parks.  Dozens of Bloomfield employees have utilized a special purchase program to build their family a Bloomfield home.
     We greatly enjoy our daily work delivering the American Dream of homeownership.  Each home, each family, and each neighborhood is a unique and special place that we enjoy visiting many years later to see how it evolves.
     Thank you for taking the time to visit us and consider us as your homebuilder.</i>
+    <div style="padding-bottom: 20px;align-self: end; padding-right: 50px; padding-bottom: 50px;">-Bloomfield</div>
   </div>
 </div>
 
