--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div class="flex-container" style="flex-direction: column; padding-right: 25px;">
     <h4>Best house money can buy!</h4>
     <p>Please Buy your house with us!</p>
-    <a href="https://www.bloomfieldhomes.com/about-us/">
-      <button class="rounded" style="width: 60px; background-color: rgb(28, 28, 190); color: white;">About</button>
+    <a href="https://www.bloomfieldhomes.com/about-us/" style="width: 20px;">
+      <button class="rounded" style="width: 60px; background-color: rgb(28, 28, 190); color: white; cursor: pointer;">About</button>
     </a>
   </div>
 
@@ -64,6 +64,22 @@
     We greatly enjoy our daily work delivering the American Dream of homeownership.  Each home, each family, and each neighborhood is a unique and special place that we enjoy visiting many years later to see how it evolves.
     Thank you for taking the time to visit us and consider us as your homebuilder.</i>
     <div style="padding-bottom: 20px;align-self: end; padding-right: 50px; padding-bottom: 50px;">-Bloomfield</div>
+  </div>
+</div>
+
+<div class="flex-container center" style="height: 240px;">
+  <div class="flex-container; bluebox" style="background-color: blue;">
+    <div class="flex-container" style="gap: 10rem">
+      <div class="flex-container" style="flex-direction: column;">
+        <div style="color: white;">Call to action! It's time!</div>
+        <div style="color: white">Buy your house today by clicking the button right over there!</div>
+      </div>
+      <div class="flex-container center">
+       <a href="https://www.bloomfieldhomes.com/new-homes/model-homes/" style="height: 20px;">
+          <button style="cursor: pointer; color: white; background-color: transparent; border-color: white; border-radius: 4px;">Buy Here!</button>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 
