--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   </div>
 </div>
 
-
-<div class="flex-container darkgray center" style="color: white; gap: 10em; height: 200px;">
-  <div class="flex-container" style="flex-direction: column; padding-right: 25px;">
-    <h4>Best house money can buy!</h4>
+<div class="flex-container darkgray center" style="height: 300px;">
+<div class="flex-container" style="color: white; height: 250px; margin-right: 50px; margin-left: 50px; gap:4em; margin-bottom: 40px;">
+  <div class="flex-container" style="flex-direction: column;">
+    <h4 class="heromain" style="margin-bottom: 0px;">Best house money can buy!</h4>
     <p>Please Buy your house with us!</p>
     <a href="https://www.bloomfieldhomes.com/about-us/" style="width: 20px;">
-      <button class="rounded" style="width: 60px; background-color: rgb(28, 28, 190); color: white; cursor: pointer;">About</button>
+      <button class="rounded" style="width: 60px; background-color: #3882F6; color: white; cursor: pointer;">About</button>
     </a>
   </div>
 
@@ -33,6 +33,7 @@
       <img style="width:200px;" src="https://media.bloomfieldhomes.com/328/2023/9/13/logo-horizontal.png?width=400&ois=7001543&fit=bounds&height=89">
     </a>
   </div>
+</div>
 </div>
 
 <h4 style="text-align: center;">Buy Now!</h4>
@@ -68,15 +69,15 @@
 </div>
 
 <div class="flex-container center" style="height: 240px;">
-  <div class="flex-container; bluebox" style="background-color: blue;">
+  <div class="flex-container; bluebox" style="background-color: #3882F6;">
     <div class="flex-container" style="gap: 10rem">
       <div class="flex-container" style="flex-direction: column;">
-        <div style="color: white;">Call to action! It's time!</div>
-        <div style="color: white">Buy your house today by clicking the button right over there!</div>
+        <div style="color: #F9FAF8;">Call to action! It's time!</div>
+        <div style="color: #F9FAF8">Buy your house today by clicking the button right over there! =></div>
       </div>
       <div class="flex-container center">
        <a href="https://www.bloomfieldhomes.com/new-homes/model-homes/" style="height: 20px;">
-          <button style="cursor: pointer; color: white; background-color: transparent; border-color: white; border-radius: 4px;">Buy Here!</button>
+          <button style="cursor: pointer; color: #F9FAF8; background-color: transparent; border-color: white; border-radius: 4px;">Buy Here!</button>
         </a>
       </div>
     </div>
